--- a/css/style.css
+++ b/css/style.css
@@ -205,10 +205,10 @@ nav ul a {
     margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 580px) {
     .text_h {
         padding: 4% 0;
-        font-size: 5em;
+        font-size: 3em;
         font-weight: 100;
         color: white;
     }
@@ -249,6 +249,12 @@ nav a.button-collapse {
     line-height: 30px !important;
 }
 
+.text_about{
+    margin-top: 80px;
+    margin-bottom: 80px;
+    text-align:center;
+    font-size: 18px;
+}
 footer.page-footer {
     margin-top: 0px !important;
 }
